chore: cleanup demo and codebase

--- a/demo/index.html
+++ b/demo/index.html
@@ -58,6 +58,7 @@ table {
   </style>
   <body>
     <div id="root"><!--app-html--></div>
-    <script type="module" src="/src/entry-client.jsx"></script>
+    <script type="module" src="./src/entry-client.jsx"></script>
+    <!-- <script type="module" src="./src/entry-server.jsx"></script> -->
   </body>
 </html>
